<resources>
    <string name="app_name">Readymix Concrete Inventory</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="category_overview">Inventory Details</string>
    <string name="hint_readymix_name">Readymix product name</string>
    <string name="hint_price">Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="category_supplier_details">Supplier Details</string>
    <string name="hint_supplier_email">Supplier Email</string>
    <string name="hint_supplier_phone">Supplier Phone</string>
    <string name="unit_cubic_meter">M\u00B3</string>
    <string name="other_supplier">Other Supplier</string>
    <string name="srmcc_supplier">Saudi Readymix Co.</string>
    <string name="cemex_supplier">CEMEX</string>
    <string name="ubinto_supplier">Ubinto</string>
    <string name="binladen_supplier">Bin Laden Co.</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editProduct_insert_new_failed">Error with saving new readymix product</string>
    <string name="editProduct_insert_new_successful">New readymix product saved</string>
    <string name="label_currency">$</string>
    <string name="empty_view_title_text">The inventory is epmty…</string>
    <string name="empty_view_subtitle_text">Get started by adding a new readymix product</string>
    <string name="editor_activity_title_edit_readymix_product">Edit Readymix product</string>
    <string name="editor_activity_title_new_readymix_product">Add new readymix product</string>
    <string name="editProduct_update_successful">Readymix product updated</string>
    <string name="editProduct_update_failed">Error with updating readymix product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editProduct_delete_readymix_failed">Error with deleting readymix product</string>
    <string name="editProduct_delete_readymix_successful">Readymix product deleted</string>
    <string name="delete_dialog_msg">Delete this readymix product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="sale">Sale</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_InventoryList">Inventory List</string>
    <string name="category_AddInventory">Add Inventory</string>
    <string name="action_edit">Edit Product</string>
    <string name="editProduct_insert_blank_fields_warning">Blank fields not allowed. Please try update again.</string>
    <string name="updateProduct_insert_blank_fields_warning">Blank fields not allowed. Please try enter again.</string>
    <string name="InventoryEdit">Inventory Edit</string>
    <string name="product_details">Product Details</string>
</resources>
