<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context="com.fisal.readymixconcreteinventory.ViewProductDetailsActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_readymix_name"
                style="@style/EditorReadOnlyFieldStyle"
                android:hint="@string/hint_readymix_name"
                android:inputType="textCapWords" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_readymix_price"
                style="@style/EditorReadOnlyFieldStyle"
                android:hint="@string/hint_price"
                android:inputType="textCapWords" />


            <!-- Measurement category -->
            <LinearLayout
                android:id="@+id/container_measurement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Quantity field -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp">


                    <Button
                        android:id="@+id/decreaseQuantity"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:text="-" />
                    <EditText
                        android:id="@+id/edit_readymix_quantity"
                        style="@style/QuantityReadOnlyFieldStyle"
                        android:layout_toRightOf="@+id/decreaseQuantity"
                        android:layout_toEndOf="@+id/decreaseQuantity"
                        android:hint="@string/hint_quantity"
                        android:inputType="textCapWords" />

                    <!-- Units for cubic meter (m3) -->
                    <TextView
                        android:id="@+id/label_cubic_meter_units"
                        style="@style/EditorUnitsStyle"
                        android:layout_toEndOf="@+id/edit_readymix_quantity"
                        android:layout_toRightOf="@+id/edit_readymix_quantity"
                        android:text="@string/unit_cubic_meter" />
                    <Button
                        android:id="@+id/increaseQuantity"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_toRightOf="@+id/label_cubic_meter_units"
                        android:layout_toEndOf="@+id/label_cubic_meter_units"
                        android:text="+" />

                </RelativeLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/edit_readymix_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_action_add_image" />

        </LinearLayout>
    </LinearLayout>

    <!-- Supplier Details category -->
    <LinearLayout
        android:id="@+id/container_supplier_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier_details" />


        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Supplier name drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_supplier_name"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:focusedByDefault="false"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!-- Supplier Email field -->
                <ImageButton
                    android:id="@+id/emailImageButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentRight="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    app:srcCompat="@android:drawable/ic_dialog_email" />

                <EditText
                    android:id="@+id/edit_supplier_email"
                    style="@style/EmailAndPhoneEditorFieldStyle"
                    android:layout_toLeftOf="@+id/emailImageButton"
                    android:layout_toStartOf="@+id/emailImageButton"
                    android:hint="@string/hint_supplier_email"
                    android:inputType="textCapWords" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!-- Supplier Phone field -->
                <ImageButton
                    android:id="@+id/phoneImageButton"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentRight="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    app:srcCompat="@android:drawable/ic_menu_call" />

                <EditText
                    android:id="@+id/edit_supplier_phone"
                    style="@style/EmailAndPhoneEditorFieldStyle"
                    android:layout_toLeftOf="@+id/phoneImageButton"
                    android:layout_toStartOf="@+id/phoneImageButton"
                    android:hint="@string/hint_supplier_phone"
                    android:inputType="textCapWords" />


            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
    <!-- here -->

</LinearLayout>
